--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -545,4 +545,14 @@ We can see that the most savings is again, the one with the second most recommen
 
 # Discussion
 
+The findings from our analysis of the Industrial Assessment Centers (IACs) in Washington provide insightful revelations into the effectiveness of energy-saving measures across various industries. By assessing the economic impact of these measures, our research aligns with initial hypotheses that targeted interventions, particularly in high-energy-use sectors like manufacturing, can yield significant cost reductions and environmental benefits. These results validate the notion that specific technological upgrades—such as heat recovery systems and energy-efficient lighting—consistently offer substantial savings and underscore their broad applicability across diverse industrial contexts.
+
+However, the conclusions drawn from this dataset are subject to certain limitations that must be considered when interpreting the results. The scope of data, confined to Washington-based centers, may not fully represent the diverse industrial landscapes of other regions, potentially limiting the generalizability of our findings. Additionally, the reliance on self-reported data could introduce biases, as it may not perfectly capture the nuances of energy savings or the external economic factors that can influence these figures. Moreover, the analysis predominantly captures a snapshot within specific fiscal years, which might not adequately reflect long-term trends or the gradual accumulation of cost savings from implemented measures.
+
+Looking forward, to build on the current research and enhance the robustness of our conclusions, several avenues are recommended. Expanding the geographic scope of the study to include data from IACs across different states would provide a more comprehensive view of the trends and allow for a comparative analysis across varying economic conditions. Implementing longitudinal studies could offer deeper insights into the sustained effectiveness of energy-saving recommendations and their long-term economic impacts. Integrating additional datasets such as regional energy prices, economic indicators, and advancements in technology would help isolate the effects of IAC recommendations from other variables. Lastly, incorporating qualitative assessments from companies regarding the implementation and operational changes prompted by the recommendations could enrich the quantitative data, providing a fuller picture of the barriers and drivers behind the energy savings reported.
+
+This extended analysis and integration of broader datasets would not only solidify the findings but also potentially guide more effective policy-making and strategic business decisions aimed at enhancing industrial energy efficiency on a wider scale.
+
+This analysis not only validates the effectiveness of specific energy-saving interventions but also provides a roadmap for future efforts to enhance energy efficiency across the industrial sector. By continuing to focus on tailored, strategic recommendations, significant advancements can be made in reducing energy costs and promoting sustainable industrial practices. The clear message is that targeted energy efficiency measures, supported by data-driven insights and strong policy frameworks, are crucial for achieving economic and environmental goals.
+
 # Summary
